# DUNE_ND_GeoEff

./: CMakeLists.txt  README.md  compile  setup.sh  testRead.cc
app/: CMakeLists.txt  EDepSimForMakeProject_20200424.root  Edepsim_ana.py  Edepsim_ana_nueapp_stage1.py  Edepsim_ana_nueapp_stage2.py  Electron_gen_edepsim.sh  FDEffCalc.C  FDEffCalc_ivy.C  FDVtxPlot_ivy.cpp  FDVtxPlot_z_downstream_ivy.cpp  FDVtxPlot_z_fixed_ivy.cpp  FDVtxPlot_z_ivy.cpp  Gen_electron.mac  Helpers.h  MergeFiles.cpp  Plot_E_vistrue.cpp  Plot_Evistrue.cpp  ReadEffNtuple.cpp  ReadEffNtuple_ivy.cpp  ReadHadronHitNtuple.cpp  ReadHadronHitNtuple_ivy.cpp  UserConfig.py  runGeoEff.cpp  runGeoEffEDepSimBeamDir.cpp  runGeoEffFDEvtSim.cpp  runGeoEffFDEvtSim_copy.cpp  runGeoEffFDEvtSim_hadronplot.cpp  runGeoEffFDEvtSim_ivy.cpp  runGeoEffFDEvtSim_original.cpp  runGeoEffFDEvtSim_test.cpp
include/: geoEff.h
src/: CMakeLists.txt  geoEff.cpp  pyGeoEff.cpp
